:iphone: Fix `pre` overflow in mobile (#1611)

--- a/packages/website/src/utils/theme/theme.css
+++ b/packages/website/src/utils/theme/theme.css
@@ -114,6 +114,10 @@ pre {
   padding: 1em;
 }
 
+.overflow-x-adjust {
+  overflow-x: auto;
+}
+
 .wrap {
   max-width: 1100px;
   margin: 0 auto;
